docs/i18n/it/docusaurus-plugin-content-docs/version-1.4/shortcuts.md
---
title: "Scorciatoie"
sidebar_position: 2
---

Ci sono alcune scorciatoie che puoi usare nell'editor. Alcuni di loro sono scritti sotto i pulsanti.

## Generale

* `Ctrl` + `N`: Nuovo file
* `Ctrl` + `Maiusc` + `N`: Nuovo file dal modello
* `Ctrl` + `O`: Apri file
* `Ctrl` + `I`: Importa file
* `Ctrl` + `E`: Esporta file
* `Ctrl` + `Maiusc` + `E`: Esporta file come immagine
* `Ctrl` + `Alt` + `E`: Esporta file come svg
* `Ctrl` + `Alt` + `S`: Apri le impostazioni

## Progetto

* `Ctrl` + `Z`: Annulla
* `Ctrl` + `Y`: Ripeti
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Maiusc` + `S`: Apri impostazioni progetto
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Apri la finestra della tavolozza colori
* `Ctrl` + `B`: Apri finestra di dialogo di sfondo
* `Ctrl` + `Maiusc` + `A`: Apri aree finestra
* `Ctrl` + `L`: Apri la finestra dei livelli
* `Ctrl` + `S`: Salva
* `Alt` + `S`: Cambia percorso

## Stylus

* `Primary button`: Change to hand tool
* `Pulsante secondario`: Cambia al secondo pittore
